<resources>
    <string name="app_name">PassVault</string>
    <string name="login_button">Log in</string>
    <string name="logo">Logo</string>
    <string name="email">Enter email address</string>
    <string name="password">Enter password</string>
    <string name="new_acc_text">Not using yet?</string>
    <string name="new_acc_link">Create an account</string>
    <string name="pass_forgot">Forgot your password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Let\'s get started</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="continue_reg">Continue</string>
    <string name="create_your_password">Create your password</string>
    <string name="pass_hints">Come up with something unique, memorable and difficult to guess.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="pass_hint">Password hint (optional)</string>
    <string name="use_biometrics_as_a_key">Use biometrics as a key</string>
    <string name="turn_on_touch_id_and_feel_the_power_of_your_fingerprint">Turn on Touch ID and feel the power of your fingerprint.</string>
    <string name="unlock_your_vault_in_a_second">Unlock your vault in a second</string>
    <string name="recover_your_account_if_you_forget_your_master_password">Recover your account if you forget your master password</string>
    <string name="turn_on_biometrics">TURN ON BIOMETRICS</string>
    <string name="do_it_later">I\'LL DO IT LATER</string>
    <string name="your_data_will_be_accessible_with_any_biometric_profile_registered_on_this_device">Your data will be accessible with any biometric profile registered on this device</string>
    <string name="recover_account">RECOVER ACCOUNT</string>
    <string name="or_send_hint">OR SEND HINT</string>
    <string name="pass_forgot_hint">You can recover your account by tapping on the button below. Alternatively, if you created a password hint \nearlier, we\'ll email it to you.</string>
    <string name="terms">By completing this form, you agree to the following terms and conditions: Terms and conditions</string>
    <string name="log_with_fingerprint">Login with fingerprint</string>

    <string name="all_items">All items</string>
    <string name="passwords">Passwords</string>
    <string name="payment_cards">Payment cards</string>
    <string name="generate_password">Generate Password</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="version_1_0_0_0">Version 1.0.0.0</string>
    <string name="build_21_04_2023_12_41_am">Build: 21/04/2023 12:41 AM</string>
    <string name="copyright">Copyright 2023 PassVault. All Rights Reserved.</string>
    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="add_button">Add button</string>
    <string name="use">USE</string>
    <string name="cancel">Cancel</string>
    <string name="refresh_pass">Refresh Pass</string>
    <string name="copy_password">Copy Password</string>
    <string name="password_length">Password length:</string>
    <string name="choose_a_password_type">Choose a password type</string>
    <string name="more_options">More options</string>
    <string name="allow_all_characters">Allow all characters\nAny character combination</string>
    <string name="easy_to_read">Easy to read\nAvoid ambiguous characters, like O, 0, I, l</string>
    <string name="easy_to_say">Easy to say\nJust lowercase and uppercase characters</string>
    <string name="lowercase_abc">Lowercase (abc)</string>
    <string name="uppercase_abc">Uppercase (ABC)</string>
    <string name="numbers_123">Numbers (123)</string>
    <string name="randomized_symbols">Randomized symbols (!@#)</string>
    <string name="payment_card">Payment card</string>
    <string name="add_payment_card">Add payment card</string>
    <string name="add_password">Add password</string>
    <string name="logout">Logout</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="username">Username</string>
    <string name="add">Add</string>
    <string name="notes">Notes</string>
    <string name="name_of_card">Name of card</string>
    <string name="type">Type</string>
    <string name="number">Number</string>
    <string name="security_code">Security code</string>
    <string name="expiration_date">Expiration date</string>
    <string name="icon">icon</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="welcome">Welcome to PassVault, the password manager app that helps you keep your passwords safe and secure.Before registering for our service, please read and agree to the following terms and conditions:</string>
    <string name="registration">\n1. Registration and Account \na. To use PassVault, you must register an account with us. You agree to provide accurate and complete information during registration and to keep your account information up to date. \nb. You are solely responsible for maintaining the confidentiality of your account credentials, including your username and password. You agree to notify us immediately if you suspect any unauthorized access to your account. \nc. You agree to use PassVault only for lawful purposes and to comply with all applicable laws and regulations.</string>
    <string name="security">\n2. Security \na. PassVault uses industry-standard encryption and security measures to protect your passwords and personal information. However, you acknowledge that no security system is completely foolproof, and we cannot guarantee the security of your data. \nb. You agree to use PassVault at your own risk and to take reasonable precautions to protect your account and data, such as choosing a strong password and not sharing your account information with others.</string>
    <string name="user_content">\n3. User Content \na. You retain ownership of any content you upload to PassVault, such as passwords, notes, and other information. However, you grant PassVault a non-exclusive, royalty-free, worldwide license to use, modify, and distribute your content solely for the purpose of providing our service to you. \nb. You agree not to upload any content that violates any applicable laws or infringes on the rights of others, including intellectual property rights.</string>
    <string name="termination">\n4. Termination \na. You may terminate your PassVault account at any time by contacting us or using the account deletion feature in the app. \nb. We may terminate your account or suspend your access to PassVault at any time, with or without cause, including if we believe that you have violated these terms and conditions.</string>
    <string name="limitation">\n5. Limitation of Liability \na. PassVault is provided on an \'as is\' and \'as available\' basis, without any warranty of any kind, express or implied, including but not limited to the warranties of merchantability, fitness for a particular purpose, and non-infringement. \nb. PassVault shall not be liable for any direct, indirect, incidental, special, or consequential damages arising out of or in connection with your use of our service, including but not limited to loss of data or profits, or any other intangible losses.</string>
    <string name="governing">\n6. Governing Law \na. These terms and conditions shall be governed by and construed in accordance with the laws of the jurisdiction in which PassVault is located. \nb. Any dispute arising out of or in connection with these terms and conditions shall be subject to the exclusive jurisdiction of the courts of the jurisdiction in which PassVault is located.</string>
    <string name="confirmation">\nBy registering for PassVault, you agree to be bound by these terms and conditions. If you do not agree to these terms and conditions, do not register for our service.</string>
    <string name="view">View</string>
    <string name="accessibility_service_description">Your accessibility service description</string>
    <string name="autofill">Autofill</string>
    <string name="expire_notification">Expire notification</string>
    <string name="old_password_notification">Old password notification</string>
</resources>