<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/about_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:text="@string/welcome"/>
        <TextView
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:text="@string/registration"/>
        <TextView
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:text="@string/security"/>
        <TextView
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:text="@string/user_content"/>
        <TextView
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:text="@string/termination"/>
        <TextView
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:text="@string/limitation"/>
        <TextView
            android:id="@+id/line6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:text="@string/governing"/>
        <TextView
            android:id="@+id/line7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:text="@string/confirmation"/>
    </LinearLayout>
</ScrollView>
