<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp"
    android:paddingTop="20dp"
    android:background="@color/background"
    tools:context=".BiometricActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="245dp"
            android:layout_height="165dp"
            app:srcCompat="@drawable/bio_logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_biometrics_as_a_key"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_on_touch_id_and_feel_the_power_of_your_fingerprint"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingTop="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/checked"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unlock_your_vault_in_a_second"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/checked"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recover_your_account_if_you_forget_your_master_password"
                android:textColor="@color/black"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="70dp"
            android:orientation="vertical">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/bioTurn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main"
                android:text="@string/turn_on_biometrics"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:height="60dp"
                tools:ignore="TextContrastCheck"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/bioLater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/do_it_later"
                android:textColor="@color/black"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle"
                tools:ignore="TextContrastCheck"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/your_data_will_be_accessible_with_any_biometric_profile_registered_on_this_device"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="italic"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>