<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp"
    android:paddingTop="20dp"
    android:theme="@style/Theme.PasswordManager.Light"
    tools:context=".RegisterActivity"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_mail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColorHint="@color/main"
            app:boxStrokeColor="@color/main"
            app:hintTextColor="@color/main"
            android:background="#00DFFFFF"
            android:paddingTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PassTerms"
            android:paddingTop="20dp"
            android:paddingBottom="25dp"
            android:text="@string/terms"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_email_to_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main"
            android:text="@string/continue_reg"
            android:textStyle="bold"
            android:height="60dp"
            android:textColor="@color/white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reg_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="5dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/log_in_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:linksClickable="true"
                android:textSize="16sp"
                android:text="@string/log_in"
                android:textColor="#0000FF"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>