<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingLeft="15dp"
    android:paddingTop="20dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="242dp"
            android:layout_height="235dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_email_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/main"
            app:boxStrokeColor="@color/main"
            app:hintTextColor="@color/main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="#616161"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/log_pass_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textColorHint="#EE23A5D7"
            app:boxStrokeColor="@color/main"
            app:endIconDrawable="@drawable/eye_password"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/main"
            app:hintTextColor="@color/main">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/log_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:gravity="end"
            android:linksClickable="true"
            android:text="@string/pass_forgot"
            android:textColor="#0000FF"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:backgroundTint="@color/main"
            android:text="@string/login_button"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="26dp"
                android:layout_height="27dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/bio_login"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_with_fingerprint"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/main"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/new_acc_text"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reg_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="@string/new_acc_link"
                android:textColor="#0000FF"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>