<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/main"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:padding="3dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main" />

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:drawablePadding="20dp"
        android:paddingVertical="7dp"
        app:drawableLeftCompat="@drawable/ic_edit_element" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:drawablePadding="20dp"
        android:paddingVertical="7dp"
        app:drawableLeftCompat="@drawable/ic_delete_element" />

    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:drawablePadding="20dp"
        android:paddingVertical="7dp"
        app:drawableLeftCompat="@drawable/ic_view_element" />

</LinearLayout>