<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/passwords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_password"
            android:src="@drawable/ic_menu_password" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_password"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/payment_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/payment_card"
            android:src="@drawable/ic_menu_card" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_payment_card"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"/>

    </LinearLayout>

</LinearLayout>

